{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 37,
  "lineage": "17452d7e-01da-3533-b20b-212e4c1d5baf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06878d265978313ca",
            "arn": "arn:aws:ec2:us-east-1:409228579426:instance/i-0d90902941c72cb88",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d90902941c72cb88",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cec816318ea6c2c2",
            "private_dns": "ip-10-0-0-182.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.182",
            "public_ip": "44.212.66.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09787171c421484a9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-02cff5b78f1525f97"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6fd6eb555e1a4aa",
            "tags": {
              "Name": "apache2"
            },
            "tags_all": {
              "Name": "apache2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02cff5b78f1525f97"
            ]
          },
          "dependencies": [
            "aws_security_group.mysecgr",
            "aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:409228579426:internet-gateway/igw-0ed5fa9d6d2f5267e",
            "id": "igw-0ed5fa9d6d2f5267e",
            "owner_id": "409228579426",
            "tags": {
              "Name": "main_igw"
            },
            "tags_all": {
              "Name": "main_igw"
            },
            "vpc_id": "vpc-0365dce0aaf4f87aa"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ed5fa9d6d2f5267e",
            "id": "r-rtb-04f4471e91b50762e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04f4471e91b50762e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.mytable",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mytable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:409228579426:route-table/rtb-04f4471e91b50762e",
            "id": "rtb-04f4471e91b50762e",
            "owner_id": "409228579426",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ed5fa9d6d2f5267e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mytable"
            },
            "tags_all": {
              "Name": "mytable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0365dce0aaf4f87aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnetass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b81fa38f9c344bb3",
            "route_table_id": "rtb-04f4471e91b50762e",
            "subnet_id": "subnet-0a6fd6eb555e1a4aa"
          },
          "dependencies": [
            "aws_route_table.mytable",
            "aws_subnet.subnet",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysecgr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:409228579426:security-group/sg-02cff5b78f1525f97",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02cff5b78f1525f97",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "409228579426",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysecgr"
            },
            "tags_all": {
              "Name": "mysecgr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0365dce0aaf4f87aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:409228579426:subnet/subnet-0a6fd6eb555e1a4aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6fd6eb555e1a4aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "409228579426",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicSubnet"
            },
            "tags_all": {
              "Name": "publicSubnet"
            },
            "vpc_id": "vpc-0365dce0aaf4f87aa"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:409228579426:vpc/vpc-0365dce0aaf4f87aa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-034c51cffbcd0c735",
            "default_route_table_id": "rtb-055b1321a3d6ee50b",
            "default_security_group_id": "sg-0a8d6bf18baee40ee",
            "dhcp_options_id": "dopt-09a51696399cf0504",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0365dce0aaf4f87aa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-055b1321a3d6ee50b",
            "owner_id": "409228579426",
            "tags": {
              "Name": "mainvpc"
            },
            "tags_all": {
              "Name": "mainvpc"
            }
          }
        }
      ]
    }
  ]
}